arreglo en materialize

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@
  	border-radius: 7%;
 }
 .btnder {
- 	background-color: #EC008C;
+ 	background-color: rgba(239,1,124,1);
  	color: #FFF;
  	font-size: 70%;
  	margin-left: 20px;
