--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,12 @@
 	border-color: #fff;
 }
 /*Sign up page */ 
+
+.titlesignup {
+	padding-top: 5%;
+}
+
+.iconleft{
+	padding-top: 5%;
+	padding-left: 3%;
+}
