--- a/css/main.css
+++ b/css/main.css
@@ -47,10 +47,20 @@
 	width: 50%;
 }
 .secpais {
-	padding-left: 10%;
-	padding-top: 15%;
+	margin-top: 4%;
+	padding-left: 2%;
+	padding-top: 1%;
+	color: #ec407a;
 }
 .bandera{
 	width: 7%;
 	height: 5%;
+}
+.banpais {
+	display: inline-block;
+}
+.numtelefono { 
+	margin-top: 5%;
+	margin-left: 1%;
+	border-color: gray;
 }
