--- a/css/main.css
+++ b/css/main.css
@@ -32,20 +32,6 @@
 	margin-left: 7%;
 }
 
-.di {
-	display: inline-block;
-}
-.mg-rg {
-	padding-right: 25%;
-	padding-top: 20%;
-}
-.footernext {
-	padding-top: 70%;
-	padding-left: 20%;
-}
-.btnnext{
-	width: 50%;
-}
 .secpais {
 	margin-top: 4%;
 	padding-left: 2%;
@@ -63,4 +49,7 @@
 	margin-top: 5%;
 	margin-left: 1%;
 	border-color: gray;
+}
+.sectnext{
+	margin-top: 49%;
 }
