--- a/css/countries.css
+++ b/css/countries.css
@@ -1,9 +1,11 @@
 /*Countries style page */ 
 .banderas{
-	width: 18%; 
-	height:9%;
+	width: 11%;
+	height: 9%;
 }
 
 .paises {
 	display: inline-block;
+	text-align: left;
 }
+
