Navbar and side-bar menu

--- a/css/signup_user.css
+++ b/css/signup_user.css
@@ -1,8 +1,7 @@
 /* Signup user page style */
-.terminos{
-	margin-left: 25%;
-	margin-bottom: 7%;
-}
 .termof{
 	margin-left: 7%;
+}
+.btnnext2{
+	margin-bottom: 3%;
 }
